opera_museum/museum/static/museum/navbar/css/navbar.css
.Navigator {
    padding: 17px 0px 9px 0px;
    z-index: 670;
    background: url("../img/shadow.png") repeat-x bottom;
}

.title {
    margin: 0px auto;
    margin-bottom: 26px;
	width: 998px;
	height: 94px;
}

.dtam {
	float: left;
    margin-left: 22px;
    margin-right: 32px;
}

.school_logo {
    float: right;
	<!-- margin-right: 14px; -->
}

.nav {
    float: left;
	margin-top: -25px;
    margin-left: 360px;
}

.nav a {
	display: inline-block;
	margin: 0px 3px 0px 21px;
	color: #666;
    font-size: 18px;
    font-family: 'STHeiTi';
	text-decoration: none;
}

.current {
    margin-top: 3px;
	background: url("../img/highlight.png") repeat-x bottom;
}

.search {
	margin: 0px auto;
	width: 1005px;
    height: 34px;
}

.search-form {
    width: 100%;
    height: 100%;
}

.input-group {
    width: 100%;
}

.input-group-addon {
    background-color: #fff;
    border-top-left-radius: 5px;
    border-bottom-right-radius: 5px;
}

.form-control {
    background-color: #e9e9e9;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

